--- a/res/style.css
+++ b/res/style.css
@@ -432,7 +432,12 @@ canvas:-webkit-full-screen {
     image-rendering: pixelated;
 }
 
-#sourceContainer, #daContainer, #stateContainer, #historyContainer, #ramContainer, #qrcContainer {
+#sourceContainer,
+#daContainer,
+#stateContainer,
+#historyContainer,
+#ramContainer,
+#qrcContainer {
     display: none;
     height: 0;
     flex-grow: 0;
@@ -729,10 +734,24 @@ canvas:-webkit-full-screen {
 .invalid{ 
     border-radius: 20px 0px 0px 20px; 
     box-shadow: 0px 0px 1px 1px yellow inset; 
-} 
+}
 
-#compile {
-    margin-left: auto;
+#flashContainer {
+    background-color: #123;
+    flex-grow: 1;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+}
+
+#flashContainer li {
+    display: inline-block;
+    padding: 0;
+    height: 25px;
+    overflow: hidden;
 }
 
 #addNewFile {
@@ -787,3 +806,4 @@ canvas:-webkit-full-screen {
 #codeToolTip:after {
     content: attr(data-text);
 }
+
