closes #15. Space analysis

--- a/res/layouts/Sim.html
+++ b/res/layouts/Sim.html
@@ -58,7 +58,7 @@
       </div>
       <div class="horizontalContainer tabs">
 	<ul id="flashContainer" data-src="ram.blocksizes">
-	  <li title="{{key}}: {{value.bytes}}b" style="width:{{value.size}}; color:{{value.color}}; background:{{value.anticolor}}">{{key}}</li>
+	  <li title="{{value.name}}: {{value.bytes}}b" style="width:{{value.size}}; color:{{value.color}}; background:{{value.anticolor}}">{{value.name}}</li>
 	</ul>
       </div>
       <div id="ace" change-call="commit"></div>
