--- a/res/layouts/Env.html
+++ b/res/layouts/Env.html
@@ -6,7 +6,7 @@
   <div>
     
     <h1>ProjectABE - 0.6.7</h1>
-    <a class="newProject" href="?url=new">New Game</a>
+    <a class="newProject" undefined-hide="ram.debuggerEnabled" href="?url=new">New Game</a>
     <ul class="market" data-src="app.repo">
       <li data-url="{{value.binaries.0.filename}}" data-source="{{value.sourceUrl}}" style="background-image: url({{value.screenshots.0.filename}})" click-call="play">
 	<span class="gameName" data-name="{{value.title}}"></span>
