--- a/res/layouts/Sim.html
+++ b/res/layouts/Sim.html
@@ -136,7 +136,7 @@
       <btn click-call="powerOff" id="PWR"></btn>
       <btn click-toggle="#simContainer@class=microcard;#simContainer img@src=mc.png" click-call="microcardMode" id="MCM"></btn>
       <btn click-toggle="#simContainer@class=arduboy;#simContainer img@src=Arduboy (0).png" click-call="arduboyMode" id="ABM"></btn>
-      <btn click-toggle="#ideContainer@hidden=false" id="DBG"></btn>
+      <btn click-toggle="#ideContainer@hidden=false" undefined-hide="ram.debuggerEnabled" id="DBG"></btn>
       <btn click-call="reset" id="RESET"></btn>
       
     </div>
