initial sound work. Much broken.

--- a/res/layouts/Sim.html
+++ b/res/layouts/Sim.html
@@ -122,6 +122,7 @@
       <img src="Arduboy ({{app.color}}).png" />
       <canvas data-inject="SCREEN" id="screen" pin-sck="cpu.15" pin-sda="cpu.16" pin-res="cpu.6" pin-dc="cpu.4">
       </canvas>
+      <btn data-inject="SOUND" pin-ch1="cpu.5" pin-ch2="cpu.13"></btn>
       <led data-inject="LED" style="background-color: #F00" pin-on="cpu.10"></led>
       <led data-inject="LED" style="background-color: #0F0" pin-on="cpu.11"></led>
       <led data-inject="LED" style="background-color: #00F" pin-on="cpu.9"></led>
