Implemented Rx/Tx LEDs

--- a/res/layouts/Sim.html
+++ b/res/layouts/Sim.html
@@ -126,6 +126,9 @@
       <led data-inject="LED" style="background-color: #F00" pin-on="cpu.10"></led>
       <led data-inject="LED" style="background-color: #0F0" pin-on="cpu.11"></led>
       <led data-inject="LED" style="background-color: #00F" pin-on="cpu.9"></led>
+
+      <led data-inject="LED" style="background-color: #FA0" class="tx" pin-on="cpu.30"></led>
+      <led data-inject="LED" style="background-color: #F00" class="rx" pin-on="cpu.17"></led>
       
       <btn data-inject="BTN" id="Up" active="low" pin-on="cpu.A0" bind-key="ArrowUp"></btn>
       <btn data-inject="BTN" id="Down" active="low" pin-on="cpu.A3" bind-key="ArrowDown"></btn>
