working on repo screen

--- a/res/layouts/Env.html
+++ b/res/layouts/Env.html
@@ -5,14 +5,31 @@
 
   <div>
     
-    <h1>ProjectABE - 0.6.8</h1>
-    <a class="newProject" undefined-hide="ram.debuggerEnabled" href="?url=new">New Game</a>
-    <ul class="market" data-src="app.repo">
-      <li data-url="{{value.binaries.0.filename}}" data-source="{{value.sourceUrl}}" style="background-image: url({{value.screenshots.0.filename}})" click-call="play">
-	<span class="gameName" data-name="{{value.title}}"></span>
-	<a href="{{value.sourceUrl}}" class="authorName" data-author="{{value.author}}"></a>
-      </li>
-    </ul>
+    <h1>ProjectABE - 0.7.8</h1>
+    <div id="main">
+      <div id="leftBar">
+	<h2>Sources</h2>
+	<ul class="reponav" data-src="app.repoList">
+	  <li data-key="{{key}}" data-url="{{value}}" click-call="changeRepo">{{key}}</li>
+	</ul>
+	<h2>My Projects</h2>
+	<a class="newProject" undefined-hide="ram.debuggerEnabled" href="?url=new">New Game</a>
+	<ul class="projectsnav" data-src="app.projList">
+	  <li data-key="{{key}}">{{key}}</li>
+	</ul>
+      </div>
+      <div id="content">
+	<h2 undefined-hide="ram.repo.repository">{{ram.repo.repository}}</h2>
+	<h3 undefined-hide="ram.repo.maintainer">maintained by {{ram.repo.maintainer}}</h3>
+	<ul class="market" data-src="ram.repo.items">
+	  <li data-url="{{value.binaries.0.filename}}" data-source="{{value.sourceUrl}}" style="background-image: url({{value.screenshots.0.filename}})" click-call="play">
+	    <span class="gameName" data-name="{{value.title}}"></span>
+	    <a href="{{value.sourceUrl}}" class="authorName" data-author="{{value.author}}"></a>
+	  </li>
+	</ul>
+      </div>
+      <div id="rightBar">
+      </div>
   </div>
 
 </div>
