--- a/res/layouts/Env.html
+++ b/res/layouts/Env.html
@@ -5,7 +5,7 @@
 
   <div>
     
-    <h1>ProjectABE - 0.7.8</h1>
+    <h1 id="abetitle" click-toggle="#envContainer@class=hamburger">ProjectABE - 0.7.8</h1>
     <div id="main">
       <div id="leftBar">
 	<h2>Sources</h2>
@@ -22,13 +22,30 @@
 	<h2 undefined-hide="ram.repo.repository">{{ram.repo.repository}}</h2>
 	<h3 undefined-hide="ram.repo.maintainer">maintained by {{ram.repo.maintainer}}</h3>
 	<ul class="market" data-src="ram.repo.items">
-	  <li data-url="{{value.binaries.0.filename}}" data-source="{{value.sourceUrl}}" style="background-image: url({{value.screenshots.0.filename}})" click-call="play">
+	  <li data-key="{{key}}" style="background-image: url({{value.screenshots.0.filename}})" click-call="preview" click-set="#rightbar@class=visible">
 	    <span class="gameName" data-name="{{value.title}}"></span>
-	    <a href="{{value.sourceUrl}}" class="authorName" data-author="{{value.author}}"></a>
 	  </li>
 	</ul>
       </div>
-      <div id="rightBar">
+      <div id="rightBar" click-set="class=" undefined-hide="ram.preview">
+	<div id="preview">
+	  <ul class="images" data-src="ram.preview.screenshots">
+	    <li><img src="{{value.filename}}"></li>
+	  </ul>
+	  <h2>{{ram.preview.title}}</h2>
+	  <ul class="info">
+	    <li undefined-hide="ram.preview.genre" class="genre">Genre: {{ram.preview.genre}}</li>  
+	    <li class="item author">Author: {{ram.preview.author}}</li>
+	  </ul>
+	  <p>{{ram.preview.description}}</p>
+
+	  <div class="actions">
+	    <a href="{{ram.preview.sourceUrl}}" class="item source">Source</a>
+	    <div class="item play" click-call="play">Emulator</div>
+	    <div undefined-hide="ram.hasFlasher" class="item upload" click-call="upload">Transfer</div>
+	  </div>
+	      
+	</div>
       </div>
   </div>
 
