links and bugfixes

--- a/layouts/Env.html
+++ b/layouts/Env.html
@@ -1,23 +1,27 @@
-<div id="envContainer" class="verticalContainer"
-	ondragenter="event.stopPropagation(); event.preventDefault();"
-	ondragover="event.stopPropagation(); event.preventDefault();"
-	drop-call="onDropFile">
+<div id="envContainer" class="verticalContainer">
 
   <div>
     
     <h1 id="abetitle" click-toggle="#envContainer@class=hamburger">ProjectABE - 0.7.9</h1>
     <div id="main">
-      <div id="leftBar">
+      <div id="leftBar" data-state="embed">
 	<h2>Sources</h2>
 	<ul class="reponav" data-src="app.repoList">
-	  <li data-key="{{key}}" data-url="{{value}}" click-call="changeRepo">{{key}}</li>
+	  <li data-key="{{key}}" data-url="{{value}}" click-call="changeRepo" click-set="#main@class=repo">{{key}}</li>
 	</ul>
-	<h2>My Projects</h2>
+	<h2>Links</h2>
+	<ul class="linknav">
+	  <li click-call="embed", data-url="https://community.arduboy.com">Community</li>
+<li click-call="embed", data-url="https://mlxxxp.github.io/documents/Arduino/libraries/Arduboy2/Doxygen/html/index.html">Arduboy2</li>
+<li click-call="embed", data-url="https://cdn-shop.adafruit.com/datasheets/atmel-7766-8-bit-avr-atmega16u4-32u4_datasheet.pdf">32u4 Datasheet</li>
+	</ul>
+	<h2 undefined-hide="ram.debuggerEnabled" >My Projects</h2>
 	<a class="newProject" undefined-hide="ram.debuggerEnabled" href="?url=new">New Game</a>
 	<ul class="projectsnav" data-src="app.projList">
 	  <li data-key="{{key}}">{{key}}</li>
 	</ul>
       </div>
+      <div id="embed"></div>
       <div id="content">
 	<h2 undefined-hide="ram.repo.repository">{{ram.repo.repository}}</h2>
 	<h3 undefined-hide="ram.repo.maintainer">maintained by {{ram.repo.maintainer}}</h3>
@@ -41,8 +45,8 @@
 
 	  <div class="actions">
 	    <a href="{{ram.preview.sourceUrl}}" class="item source">Source</a>
-	    <div class="item play" click-call="play">Emulator</div>
-	    <div undefined-hide="ram.hasFlasher" class="item upload" click-call="upload">Transfer</div>
+	    <div class="item play" click-call="play" title="Play in the browser!">Emulator</div>
+	    <div class="item upload" click-call="upload" title="Upload this game to your arduboy!">Transfer</div>
 	  </div>
 	      
 	</div>
