--- a/res/style.css
+++ b/res/style.css
@@ -865,6 +865,18 @@ canvas:fullscreen{
     font-style: italic;
 }
 
+log {
+    display: hidden;
+    position: absolute;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: #345;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
 #main {
     display: flex;
     flex-direction: row;
