--- a/res/layouts/Env.html
+++ b/res/layouts/Env.html
@@ -44,7 +44,7 @@
 	  <p>{{ram.preview.description}}</p>
 
 	  <div class="actions">
-	    <a href="{{ram.preview.sourceUrl}}" class="item source">Source</a>
+	    <div click-call="embed" data-url="{{ram.preview.sourceUrl}}" class="item source">Source</div>
 	    <div class="item play" click-call="play" title="Play in the browser!">Emulator</div>
 	    <div class="item upload" click-call="upload" title="Upload this game to your arduboy!">Transfer</div>
 	  </div>
