--- a/res/layouts/Env.html
+++ b/res/layouts/Env.html
@@ -18,7 +18,7 @@
 	<h2 undefined-hide="ram.debuggerEnabled" >My Projects</h2>
 	<a class="newProject" undefined-hide="ram.debuggerEnabled" href="?url=new">New Game</a>
 	<ul class="projectsnav" data-src="app.projList">
-	  <li data-key="{{key}}">{{key}}</li>
+	  <li click-call="play" data-title="{{value.title}}" data-url="null" data-lsp="{{value.localSourcePath}}">{{value.title}}</li>
 	</ul>
       </div>
       <div id="embed"></div>
