--- a/res/layouts/Sim.html
+++ b/res/layouts/Sim.html
@@ -33,7 +33,7 @@
 	  <select
 	    id="currentFile"
 	    change-call="changeSourceFile"
-	    data-src-indirect="app.srcpath"
+	    data-src-indirect="ram.srcpath"
 	    data-sort="key"
 	    title="Ctrl-P"
 	    >
