--- a/res/layouts/Sim.html
+++ b/res/layouts/Sim.html
@@ -73,6 +73,7 @@
 	</label>
       </div>
       <ul id="history"></ul>
+      <input onchange="pins.serial0In = event.target.value; event.target.value = ''">
     </div>
     
     <div class="verticalContainer" id="ramContainer">
