--- a/res/style.css
+++ b/res/style.css
@@ -10,6 +10,13 @@ html, body {
     color: #DEF;
 }
 
+#getNative{
+    font-style: italic;
+    text-align: right;
+    cursor: pointer;
+    margin-right: 10px;
+}
+
 #splashContainer {
     width: 100%;
     height: 100%;
@@ -83,6 +90,7 @@ html, body {
 
 h1 {
     margin-left: 20px;
+    margin-bottom: 0;
 }
 
 h2 {
