--- a/layouts/Env.html
+++ b/layouts/Env.html
@@ -2,7 +2,9 @@
 
   <div>
     
-    <h1 id="abetitle" click-toggle="#envContainer@class=hamburger">ProjectABE - 0.7.9</h1>
+    <h1 id="abetitle" click-toggle="#envContainer@class=hamburger">ProjectABE - 0.8.10</h1>
+    <a id="getNative" click-call="embed" data-url="https://github.com/felipemanga/ProjectABE/releases/latest" true-hide="ram.isNativeBuild" >Get ProjectABE stand-alone!</a>
+
     <div id="main">
       <div id="leftBar" data-state="embed">
 	<h2>Sources</h2>
@@ -11,14 +13,14 @@
 	</ul>
 	<h2>Links</h2>
 	<ul class="linknav">
-	  <li click-call="embed", data-url="https://community.arduboy.com">Community</li>
-<li click-call="embed", data-url="https://mlxxxp.github.io/documents/Arduino/libraries/Arduboy2/Doxygen/html/index.html">Arduboy2</li>
-<li click-call="embed", data-url="https://cdn-shop.adafruit.com/datasheets/atmel-7766-8-bit-avr-atmega16u4-32u4_datasheet.pdf">32u4 Datasheet</li>
+	  <li click-call="embed" data-url="https://community.arduboy.com">Community</li>
+	  <li click-call="embed" data-url="https://mlxxxp.github.io/documents/Arduino/libraries/Arduboy2/Doxygen/html/index.html">Arduboy2</li>
+	  <li click-call="embed" data-url="https://cdn-shop.adafruit.com/datasheets/atmel-7766-8-bit-avr-atmega16u4-32u4_datasheet.pdf">32u4 Datasheet</li>
 	</ul>
 	<h2 undefined-hide="ram.debuggerEnabled" >My Projects</h2>
 	<a class="newProject" undefined-hide="ram.debuggerEnabled" href="?url=new">New Game</a>
 	<ul class="projectsnav" data-src="app.projList">
-	  <li data-key="{{key}}">{{key}}</li>
+	  <li click-call="play" data-title="{{value.title}}" data-url="null" data-lsp="{{value.localSourcePath}}">{{value.title}}</li>
 	</ul>
       </div>
       <div id="embed"></div>
@@ -44,7 +46,7 @@
 	  <p>{{ram.preview.description}}</p>
 
 	  <div class="actions">
-	    <a href="{{ram.preview.sourceUrl}}" class="item source">Source</a>
+	    <div click-call="embed" data-url="{{ram.preview.sourceUrl}}" class="item source">Source</div>
 	    <div class="item play" click-call="play" title="Play in the browser!">Emulator</div>
 	    <div class="item upload" click-call="upload" title="Upload this game to your arduboy!">Transfer</div>
 	  </div>
