--- a/layouts/Sim.html
+++ b/layouts/Sim.html
@@ -33,7 +33,7 @@
 	  <select
 	    id="currentFile"
 	    change-call="changeSourceFile"
-	    data-src-indirect="app.srcpath"
+	    data-src-indirect="ram.srcpath"
 	    data-sort="key"
 	    title="Ctrl-P"
 	    >
@@ -68,11 +68,9 @@
     <div class="verticalContainer" id="historyContainer">
       <div class="horizontalContainer tabs">
 	<button click-call="refreshHistory">Refresh</button>
-	<label>
-	  <input type="checkbox" id="autoRefreshHistory" change-call="refreshHistory"> auto
-	</label>
       </div>
       <ul id="history"></ul>
+      <input onchange="pins.serial0In = event.target.value; event.target.value = ''">
     </div>
     
     <div class="verticalContainer" id="ramContainer">
